<resources>
    <string name="a">Navigate home</string>
    <string name="b">%1$s, %2$s</string>
    <string name="c">%1$s, %2$s, %3$s</string>
    <string name="d">Navigate up</string>
    <string name="e">More options</string>
    <string name="f">Done</string>
    <string name="g">See all</string>
    <string name="h">Choose an app</string>
    <string name="i">OFF</string>
    <string name="j">ON</string>
    <string name="k">Search…</string>
    <string name="l">Clear query</string>
    <string name="m">Search query</string>
    <string name="n">Search</string>
    <string name="o">Submit query</string>
    <string name="p">Voice search</string>
    <string name="q">Share with</string>
    <string name="r">Share with %s</string>
    <string name="s">Collapse</string>
    <string name="t">Search</string>
    <string name="u">999+</string>
    <string name="v">Barcode Scanner</string>
    <string name="w">OK</string>
    <string name="x">Sorry, the Android camera encountered a problem. You may need to restart the device.</string>
    <string name="y">Place a barcode inside the viewfinder rectangle to scan it.</string>
    <string name="z">没有获得权限，部分功能将无法开启</string>
    <string name="a0">该功能需要：【%1$s】权限，请在【权限】标签里开启</string>
    <string name="a1">请授予相应权限：【%1$s】</string>
    <string name="a2">相机</string>
    <string name="a3">通讯录</string>
    <string name="a4">存储空间</string>
    <string name="a5">定位</string>
    <string name="a6">短信</string>
    <string name="a7">已经获得权限，请重新点击</string>
    <string name="a8">未授予该权限</string>
    <string name="a9">权限变更，请长按菜单键，关闭应用后，重新进入</string>
    <string name="a_">10秒</string>
    <string name="aa">3秒</string>
    <string name="ab">sans-serif</string>
    <string name="ac">sans-serif-medium</string>
    <string name="ad">sans-serif-medium</string>
    <string name="ae">sans-serif</string>
    <string name="af">sans-serif</string>
    <string name="ag">sans-serif</string>
    <string name="ah">sans-serif</string>
    <string name="ai">sans-serif-light</string>
    <string name="aj">sans-serif</string>
    <string name="ak">sans-serif</string>
    <string name="al">sans-serif</string>
    <string name="am">sans-serif-medium</string>
    <string name="an">放弃</string>
    <string name="ao">关于火山</string>
    <string name="ap">接受邀请</string>
    <string name="aq">配乐</string>
    <string name="ar">账号绑定</string>
    <string name="as">取消绑定</string>
    <string name="at">点击绑定</string>
    <string name="au">退出登录</string>
    <string name="av">绑定</string>
    <string name="aw">取消</string>
    <string name="ax">确定</string>
    <string name="ay">已绑定</string>
    <string name="az">修改签名</string>
    <string name="b0">签名</string>
    <string name="b1">女</string>
    <string name="b2">性别</string>
    <string name="b3">头像</string>
    <string name="b4">男</string>
    <string name="b5">姓名</string>
    <string name="b6">剩余%1$d字</string>
    <string name="b7">账号管理</string>
    <string name="b8">改签名成功</string>
    <string name="b9">修改失败,请稍后重试</string>
    <string name="b_">修改成功</string>
    <string name="ba">修改头像失败,请稍后再试</string>
    <string name="bb">修改头像成功</string>
    <string name="bc">立即查看</string>
    <string name="bd">-1</string>
    <string name="be">+1</string>
    <string name="bf">开心网</string>
    <string name="bg">QQ空间</string>
    <string name="bh">人人网</string>
    <string name="bi">腾讯微博</string>
    <string name="bj">新浪微博</string>
    <string name="bk">激活邀请码</string>
    <string name="bl">拨打电话</string>
    <string name="bm">确认拨打：%1$s</string>
    <string name="bn">点击下载</string>
    <string name="bo">继续下载</string>
    <string name="bp">点击安装</string>
    <string name="bq">点击打开</string>
    <string name="br">暂停下载</string>
    <string name="bs">了解更多</string>
    <string name="bt">广告营销</string>
    <string name="bu">下载中...%1$d</string>
    <string name="bv">当前网络环境为非WIFI环境，是否继续</string>
    <string name="bw">当前未连接WIFI</string>
    <string name="bx">添加头像</string>
    <string name="by">已完成手机号验证</string>
    <string name="bz">该手机号仅用于完成身份验证，不会绑定到当前火山号，为保证账号安全，将对运行环境做安全检查</string>
    <string name="c0">验证成功</string>
    <string name="c1">"该手机号仅用于完成身份验证
不会绑定到当前手机号"</string>
    <string name="c2">管理</string>
    <string name="c3">取消管理员失败,请稍后重试</string>
    <string name="c4">取消管理员成功</string>
    <string name="c5">管理员列表</string>
    <string name="c6">管理员列表为空</string>
    <string name="c7">我的管理员（%1$d / 10）</string>
    <string name="c8">设置管理员失败,请稍后重试</string>
    <string name="c9">设置管理员成功</string>
    <string name="c_">取消</string>
    <string name="ca">免费下载</string>
    <string name="cb">网页体验</string>
    <string name="cc">暂无更新，点击体验其他精彩应用 ></string>
    <string name="cd">您尚未安装 %1$s,是否免费下载?</string>
    <string name="ce">要下载 %1$s 吗？%2$s</string>
    <string name="cf">这个应用</string>
    <string name="cg">已开通</string>
    <string name="ch">"  同意"</string>
    <string name="ci">同意火山主播协议</string>
    <string name="cj">相册</string>
    <string name="ck">支付宝</string>
    <string name="cl">AliasNameLive</string>
    <string name="cm">允许别人下载我的视频</string>
    <string name="cn">允许通讯录好友找到我</string>
    <string name="co">允许非WI-FI环境下观看直播</string>
    <string name="cp">进入沙盒测试</string>
    <string name="cq">设置失败，请稍后再试</string>
    <string name="cr">显示调试信息</string>
    <string name="cs">允许他人在八卦中看到我</string>
    <string name="ct">允许他人看到我的位置信息</string>
    <string name="cu">HTTPS开关</string>
    <string name="cv">链路优选开关</string>
    <string name="cw">已绑定</string>
    <string name="cx">已复制到剪贴板</string>
    <string name="cy">已向</string>
    <string name="cz">火山主播协议</string>
    <string name="d0">和</string>
    <string name="d1">\@www.huoshan.com</string>
    <string name="d2">火山小视频</string>
    <string name="d3">应用提醒</string>
    <string name="d4">应用提醒</string>
    <string name="d5">@string/d2</string>
    <string name="d6">请设置录音权限</string>
    <string name="d7">请设置摄像头权限</string>
    <string name="d8">请设置摄像头和录音权限</string>
    <string name="d9">申请权限, 请在设置页面点击同意拍摄和录音权限</string>
    <string name="d_">没问题，给你好评</string>
    <string name="da">我要吐槽</string>
    <string name="db">残忍拒绝</string>
    <string name="dc">结算红包已经在路上，给我们一个五星好评吧亲~</string>
    <string name="dd">您的手机上没有安装应用市场</string>
    <string name="de">我关注的好友</string>
    <string name="df">你还没有关注别人</string>
    <string name="dg">最近@过</string>
    <string name="dh">搜索用户</string>
    <string name="di">提到了你</string>
    <string name="dj">发视频提到了你</string>
    <string name="dk">你已经@过他啦</string>
    <string name="dl">\@的人太多啦</string>
    <string name="dm">%1$d人在看</string>
    <string name="dn">授权</string>
    <string name="do">结算开通</string>
    <string name="dp">作者赞了这条评论</string>
    <string name="dq">我已阅读、理解并同意服务协议及隐私条款</string>
    <string name="dr">授权状态更新失败</string>
    <string name="ds">继续验证</string>
    <string name="dt">授权失败</string>
    <string name="du">我知道了</string>
    <string name="dv">重新发送(%1$d)</string>
    <string name="dw">发送验证码</string>
    <string name="dx">需要帮助</string>
    <string name="dy">此手机已绑定其他火山号，可通过验证解决当前问题</string>
    <string name="dz">手机号</string>
    <string name="e0">请输入手机号</string>
    <string name="e1">请同意《火山用户协议》</string>
    <string name="e2">密码</string>
    <string name="e3">登录密码不能为空</string>
    <string name="e4">请设置登录密码</string>
    <string name="e5">提交</string>
    <string name="e6">授权成功</string>
    <string name="e7">验证码</string>
    <string name="e8">请输入验证码</string>
    <string name="e9">请设置头像后点击完成</string>
    <string name="e_">点击更换头像</string>
    <string name="ea">请完善个人资料后点击完成</string>
    <string name="eb">头像保存中...</string>
    <string name="ec">头像过小，请重新设置</string>
    <string name="ed">返回</string>
    <string name="ee">你有未保存的修改，要放弃吗？</string>
    <string name="ef">再按一次退出</string>
    <string name="eg">百度音乐</string>
    <string name="eh">账户余额</string>
    <string name="ei">禁言名单</string>
    <string name="ej">开户行</string>
    <string name="ek">填写银行卡信息</string>
    <string name="el">请绑定持卡人本人的银行卡</string>
    <string name="em">银行卡</string>
    <string name="en">输入银行卡号</string>
    <string name="eo">%1$s储蓄卡......%2$s</string>
    <string name="ep">结算到银行%1$s,到账时间48小时</string>
    <string name="eq">《用户服务协议》</string>
    <string name="er">该操作代表我已经同意</string>
    <string name="es">更换银行卡</string>
    <string name="et">一个用户目前仅允许绑定一张本人银行卡</string>
    <string name="eu">我的银行卡</string>
    <string name="ev">身份证</string>
    <string name="ew">信息不能为空</string>
    <string name="ex">请输入短信验证码</string>
    <string name="ey">持卡人</string>
    <string name="ez">银行卡号</string>
    <string name="f0">手机号</string>
    <string name="f1">用户服务协议</string>
    <string name="f2">获取验证码</string>
    <string name="f3">结算到银行卡（推荐）</string>
    <string name="f4">结算金额（元）</string>
    <string name="f5">结算到银行卡</string>
    <string name="f6">禁言名单为空</string>
    <string name="f7">美颜</string>
    <string name="f8">美颜开</string>
    <string name="f9">您已被封禁~</string>
    <string name="f_">您目前处在禁封状态，不可开播</string>
    <string name="fa">未开通</string>
    <string name="fb">超美</string>
    <string name="fc">大图</string>
    <string name="fd">去绑定</string>
    <string name="fe">账号绑定</string>
    <string name="ff">绑定银行卡成功</string>
    <string name="fg">绑定手机号</string>
    <string name="fh">手机号绑定成功</string>
    <string name="fi">手机号绑定</string>
    <string name="fj">手机认证</string>
    <string name="fk">立即绑定</string>
    <string name="fl">解绑后将无法登陆，请先绑定手机号</string>
    <string name="fm">生日</string>
    <string name="fn">点击选择</string>
    <string name="fo">黑名单</string>
    <string name="fp">点击发送文字</string>
    <string name="fq">复制链接</string>
    <string name="fr">用浏览器打开</string>
    <string name="fs">刷新</string>
    <string name="ft">封面</string>
    <string name="fu">登录</string>
    <string name="fv">注册</string>
    <string name="fw">取消</string>
    <string name="fx">取消</string>
    <string name="fy">确定</string>
    <string name="fz">排队</string>
    <string name="g0">立即开始</string>
    <string name="g1">%sM</string>
    <string name="g2">当前缓存: %1$s</string>
    <string name="g3">开启相机权限，才能使用扫一扫</string>
    <string name="g4">可领取</string>
    <string name="g5">只能识别火山用户的二维码</string>
    <string name="g6">可兑换收益(元)</string>
    <string name="g7">取消</string>
    <string name="g8">取消管理员</string>
    <string name="g9">确认撤销</string>
    <string name="g_">的管理员权限</string>
    <string name="ga">撤销后</string>
    <string name="gb">可在你的直播间发言</string>
    <string name="gc">作品尚未保存，是否要取消?</string>
    <string name="gd">可进入你的直播间</string>
    <string name="gg">手持身份证照片</string>
    <string name="gh">必须本人手持身份证，保证身份证上信息清晰可见［样例见左图］</string>
    <string name="jz">提交审核</string>
    <string name="km">倒计时</string>
    <string name="u7">身份证号</string>
    <string name="u8">独立身份证照</string>
    <string name="u9">上传本人身份证正面照片，保证身份证上信息清晰可见［样例见左图］</string>
    <string name="w4">镜头速度</string>
    <string name="w_">0</string>
    <string name="wa">1</string>
    <string name="wb">2</string>
    <string name="wc">3</string>
    <string name="wd">4</string>
    <string name="we">5</string>
    <string name="a1f">复制连接</string>
    <string name="a4i">美拍</string>
    <string name="a63">下一步</string>
    <string name="a6_">无</string>
    <string name="a6z">正常</string>
    <string name="a91">手机号</string>
    <string name="a9s">+86</string>
    <string name="aa3">QQ</string>
    <string name="aa6">快镜头</string>
    <string name="aab">QQ空间</string>
    <string name="aag">真实姓名</string>
    <string name="ad3">本人银行卡号</string>
    <string name="aey">慢镜头</string>
    <string name="al2">取消</string>
    <string name="al_">返回</string>
    <string name="alb">安装</string>
    <string name="alf">停止</string>
    <string name="alg">应用更新</string>
    <string name="ali">更新</string>
    <string name="alj">此版本的更新记录：</string>
    <string name="aq5">如无法完成快速认证，</string>
    <string name="aq8">点击此处</string>
    <string name="aql">开始认证</string>
    <string name="aqm">请填写个人真实信息，否则无法通过认证</string>
    <string name="ast">微博</string>
    <string name="at0">微信</string>
    <string name="at1">朋友圈</string>
</resources>