<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="@color/b_" android:layout_width="fill_parent" android:layout_height="@dimen/by" android:layout_above="@id/nz"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <RadioGroup android:orientation="horizontal" android:id="@id/pd" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="32.0dip">
        <RadioButton android:id="@id/pe" android:background="@drawable/pr" android:text="@string/w_" style="@style/live_filter_dialog_radio_button_style" />
        <RadioButton android:id="@id/pf" android:background="@drawable/pr" android:text="@string/wa" style="@style/live_filter_dialog_radio_button_style" />
        <RadioButton android:id="@id/pg" android:background="@drawable/pr" android:text="@string/wb" style="@style/live_filter_dialog_radio_button_style" />
        <RadioButton android:id="@id/ph" android:background="@drawable/pr" android:text="@string/wc" style="@style/live_filter_dialog_radio_button_style" />
        <RadioButton android:id="@id/pi" android:background="@drawable/pr" android:text="@string/wd" style="@style/live_filter_dialog_radio_button_style" />
        <RadioButton android:id="@id/pj" android:background="@drawable/pr" android:text="@string/we" style="@style/live_filter_dialog_radio_button_style" />
    </RadioGroup>
</LinearLayout>