<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:gravity="center" android:orientation="vertical" android:background="#ffeeeeee" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout android:layout_weight="0.0" style="@style/title_bar_style">
        <TextView android:gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/alg" android:layout_centerInParent="true" style="@style/title_text_style" />
    </RelativeLayout>
    <TextView android:textSize="17.0sp" android:textColor="#ff464646" android:gravity="center" android:id="@id/aps" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="14.0dip" android:layout_marginBottom="14.0dip" android:layout_weight="0.0" />
    <LinearLayout android:orientation="vertical" android:id="@id/apt" android:paddingLeft="20.0dip" android:paddingRight="20.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="10.0dip" android:layout_weight="0.0">
        <ProgressBar android:id="@id/a7j" android:layout_width="fill_parent" android:layout_height="wrap_content" style="@android:style/Widget.ProgressBar.Horizontal" />
        <TextView android:textColor="@android:color/black" android:gravity="center" android:id="@id/a7i" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="4.0dip" />
    </LinearLayout>
    <View android:id="@id/apu" android:background="@drawable/ot" android:layout_width="fill_parent" android:layout_height="2.0dip" android:layout_marginBottom="14.0dip" android:layout_weight="0.0" />
    <ScrollView android:id="@id/apv" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_weight="1.0">
        <LinearLayout android:orientation="vertical" android:paddingLeft="30.0dip" android:paddingRight="30.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <TextView android:textSize="17.0sp" android:textColor="#ff464646" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="16.0dip" android:text="@string/alj" />
            <TextView android:textSize="15.0sp" android:textColor="#ff464646" android:id="@id/apw" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="" />
        </LinearLayout>
    </ScrollView>
    <FrameLayout android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_weight="0.0">
        <Button android:id="@id/apx" android:text="@string/ali" style="@style/UpdateButtonAction" />
        <Button android:id="@id/apy" android:text="@string/alb" style="@style/UpdateButtonAction" />
        <Button android:id="@id/apz" android:text="@string/alf" style="@style/UpdateButtonAction" />
    </FrameLayout>
    <FrameLayout android:paddingTop="16.0dip" android:paddingBottom="44.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_weight="0.0">
        <Button android:id="@id/k8" android:text="@string/al2" style="@style/UpdateButton" />
        <Button android:id="@id/gg" android:text="@string/al_" style="@style/UpdateButton" />
    </FrameLayout>
</LinearLayout>